--- a/main.html
+++ b/main.html
@@ -20,17 +20,18 @@
       </div>
 
       <div class="item">
-        <img src="https://img.freepik.com/free-photo/wide-angle-shot-single-tree-growing-clouded-sky-during-sunset-surrounded-by-grass_181624-22807.jpg?w=2000" class="second-slide" alt="Chicago" style="width:100%;">
+        <img src="https://encrypted-tbn0.gstatic.com/images
+			?q=tbn:ANd9GcTJeTKrXeGgecGpLTBH929VCOhZfbQ74MsQvuaJ
+			7WzR&s" class="second-slide" alt="Chicago" style="width:100%;">
       </div>
-    
       <div class="item active">
-        <img src="https://img.freepik.com/free-photo/wide-angle-shot-single-tree-growing-clouded-sky-during-sunset-surrounded-by-grass_181624-22807.jpg?w=2000" class="third-slide" alt="New york" style="width:100%;">
+        <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" class="third-slide" alt="New york" style="width:100%;">
       </div>
 		 <div class="item">
-        <img src="https://img.freepik.com/free-photo/wide-angle-shot-single-tree-growing-clouded-sky-during-sunset-surrounded-by-grass_181624-22807.jpg?w=2000" class="fourth-slide" alt="New york" style="width:100%;">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR93jLoRJ-NMzRbp_7ZZGnFCFmHSGO9y8jEXKSuZmYt&s" class="fourth-slide" alt="New york" style="width:100%;">
       </div>
 		 <div class="item">
-        <img src="https://img.freepik.com/free-photo/wide-angle-shot-single-tree-growing-clouded-sky-during-sunset-surrounded-by-grass_181624-22807.jpg?w=2000" class="fifth-slide" alt="New york" style="width:100%;">
+        <img src="https://thumbs.dreamstime.com/b/environment-earth-day-hands-trees-growing-seedlings-bokeh-green-background-female-hand-holding-tree-nature-field-gra-130247647.jpg" class="fifth-slide" alt="New york" style="width:100%;">
       </div>
     </div>
 
