--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 			7WzR&s" class="second-slide" alt="Chicago" style="width:100%;">
       </div>
       <div class="item active">
-        <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" class="third-slide" alt="New york" style="width:100%;">
+        <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" class="third-slide active" alt="New york" style="width:100%;">
       </div>
 		 <div class="item">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR93jLoRJ-NMzRbp_7ZZGnFCFmHSGO9y8jEXKSuZmYt&s" class="fourth-slide" alt="New york" style="width:100%;">
